--- a/public/css/style.css
+++ b/public/css/style.css
@@ -619,12 +619,32 @@ img.question_mark {
   -webkit-box-shadow: 0 7px 29px 0 #64646f33;
           box-shadow: 0 7px 29px 0 #64646f33;
   text-align: center;
+  background-color: transparent;
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all {
+  color: #000;
 }
 
 .template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .preview-img {
-  max-width: 120px;
+  width: 120px;
+  height: 120px;
   margin: auto;
   margin-bottom: 15px;
+  border-radius: 50%;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 0px;
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .preview-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 
 .template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .preview-title {
@@ -659,6 +679,10 @@ img.question_mark {
   margin: 5px;
 }
 
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .selected-social-icon .selected-icon path {
+  fill: #000;
+}
+
 .template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .preview-card .preview-card-body {
   color: #333333;
   background: #f1dfd5;
@@ -687,6 +711,34 @@ img.question_mark {
   overflow: hidden;
 }
 
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .preview-card .preview-card-body.tactile_one {
+  border-color: #b1f3b3;
+  -webkit-box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+          box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+  background: linear-gradient(145deg, #aaeaac, #aeeeb0);
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .preview-card .preview-card-body.tactile_two {
+  border-color: #b1f3b3;
+  -webkit-box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+          box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+  background: linear-gradient(145deg, #9dd79e, #bbffbe);
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .preview-card .preview-card-body.tactile_three {
+  border-color: #b1f3b3;
+  -webkit-box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+          box-shadow: #baffbc -6px -6px 13px, #94cb96 6px 6px 13px;
+  background: linear-gradient(145deg, #bbffbe, #a0dba2);
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .preview-card .preview-card-body.tactile_four {
+  border-color: #b1f3b3;
+  -webkit-box-shadow: #0000000a -6px -6px 13px inset, #00000026 6px 6px 13px inset;
+          box-shadow: #0000000a -6px -6px 13px inset, #00000026 6px 6px 13px inset;
+  background: linear-gradient(145deg, #aaeaac00, #aeeeb000);
+}
+
 .template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text {
   position: absolute;
   bottom: 0px;
@@ -709,7 +761,11 @@ img.question_mark {
   z-index: 2;
 }
 
-.template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text .powered-by {
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text a {
+  text-decoration: none;
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text a .powered-by {
   color: #000;
   text-transform: uppercase;
   letter-spacing: .5px;
@@ -719,13 +775,22 @@ img.question_mark {
   opacity: .6;
 }
 
-.template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text .link-text {
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text a .link-text {
   font-size: 16px;
   font-weight: 800;
   color: #000;
 }
 
-.template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text .link-text img {
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text a .link-text svg.link-img {
+  height: 16px;
+  margin-right: 2px;
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text a .link-text svg.link-img path {
+  stroke: #000;
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text a .link-text img {
   height: 16px;
   margin-right: 4px;
   margin-top: -2px;
@@ -1224,6 +1289,48 @@ div#Design {
   padding: 0 16.5px;
   font-style: italic;
   white-space: nowrap;
+}
+
+.tactile-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
+          box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
+  background: #fff;
+}
+
+.tactile-cards .tactile-item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 44px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-right: 1px solid #dfe0e1;
+  padding: 0 11px;
+  cursor: pointer;
+}
+
+.tactile-cards .tactile-item.selected {
+  background: #f0f0f0;
+  -webkit-box-shadow: inset 0 1px 8px #00000029, inset 0 0.25px 2px #00000052;
+          box-shadow: inset 0 1px 8px #00000029, inset 0 0.25px 2px #00000052;
+}
+
+.tactile-cards .tactile-item:not(:nth-of-type(1)) .tactile_img {
+  width: 30px;
+  stroke: #1a1a1a;
+  stroke-width: 7px;
 }
 
 @media screen and (max-width: 1300px) {
