--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,6 +149,10 @@ img.question_mark {
   display: none;
 }
 
+.form-check-single {
+  cursor: pointer;
+}
+
 .template-layout {
   background-color: #fff;
 }
@@ -624,6 +628,30 @@ img.question_mark {
 
 .template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all {
   color: #000;
+  position: relative;
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .share_vcard_icons {
+  position: absolute;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .share_vcard_icons .preview_share {
+  cursor: pointer;
+}
+
+.template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .share_vcard_icons .preview_share .upper_icon {
+  stroke: #000;
 }
 
 .template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .preview-img {
@@ -1145,23 +1173,25 @@ img.question_mark {
   display: none;
 }
 
-label.input-file {
-  cursor: pointer;
+.input_file_bg {
   border-radius: 6px;
   -webkit-box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
           box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
   background: #fff;
-  height: 77px;
+}
+
+.input_file_bg .input-file {
+  cursor: pointer;
   width: 100%;
   position: relative;
   height: 100%;
 }
 
-label.input-file input {
+.input_file_bg .input-file input {
   display: none;
 }
 
-label.input-file .fileRow {
+.input_file_bg .input-file .fileRow {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1174,7 +1204,7 @@ label.input-file .fileRow {
   padding: 11px;
 }
 
-label.input-file .fileRow .fileLabel {
+.input_file_bg .input-file .fileRow .fileLabel {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1187,13 +1217,49 @@ label.input-file .fileRow .fileLabel {
   font-weight: 600;
 }
 
-label.input-file .fileRow .fileImg {
+.input_file_bg .input-file .fileRow .fileImg {
   border-radius: 5px;
   width: 55px;
   height: 55px;
   border: 1px solid #dfe0e1;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.input_file_bg .file_action {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-top: 1px solid #dfe0e1;
+}
+
+.input_file_bg .file_action .action-file {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  border-right: 1px solid #dfe0e1;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 11px;
+  height: 44px;
+  text-align: center;
+  position: relative;
+  -webkit-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+  color: #1a1a1a;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.input_file_bg .file_action .action-file:nth-of-type(2) {
+  border-right: 0px solid #dfe0e1;
 }
 
 .default_embed_layout {
@@ -1331,6 +1397,17 @@ div#Design {
   width: 30px;
   stroke: #1a1a1a;
   stroke-width: 7px;
+}
+
+.font-item {
+  padding: 5px;
+  border-bottom: 1px solid #e1e1e1;
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
+.font-item:hover {
+  font-weight: 800;
 }
 
 @media screen and (max-width: 1300px) {
