--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@400;600&family=Fuggles&family=Lato:wght@400;700&family=Open+Sans:wght@400;600&family=Roboto:wght@300;700&display=swap");
 .form-control {
   border: 0px solid #dadcde;
   -webkit-box-shadow: inset 0 1px 8px #00000029, inset 0 0.25px 2px #00000052;
@@ -1416,10 +1417,31 @@ div#Design {
   border-bottom: 1px solid #e1e1e1;
   cursor: pointer;
   margin-bottom: 5px;
+  font-weight: 600;
 }
 
 .font-item:hover {
   font-weight: 800;
+}
+
+.font-item.opan-sans {
+  font-family: "Open Sans", sans-serif;
+}
+
+.font-item.roboto {
+  font-family: "Roboto", sans-serif;
+}
+
+.font-item.lato {
+  font-family: "Lato", sans-serif;
+}
+
+.font-item.dosis {
+  font-family: "Dosis", sans-serif;
+}
+
+.font-item.fuggles {
+  font-family: "Fuggles", cursive;
 }
 
 @media screen and (max-width: 1300px) {
