--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -7,14 +7,18 @@ $preview-card-border-color: transparent;
 $preview-card-border-width: 0px;
 $preview-card-border-radius: 6px;
 $preview-card-margin-bottom: 15px;
-
+$roboto-font: 'Roboto',sans-serif;
+$lato-font: 'Lato',sans-serif;
+$open-sans-font: 'Open Sans', sans-serif;
+$dosis-font: 'Dosis', sans-serif;
+$fuggles-font: 'Fuggles', cursive;
 
 
 
 // variables colors
 
 
-
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600&family=Fuggles&family=Lato:wght@400;700&family=Open+Sans:wght@400;600&family=Roboto:wght@300;700&display=swap');
 
 // comman css
 
@@ -1252,11 +1256,27 @@ div#Design {
     border-bottom: 1px solid #e1e1e1;
     cursor: pointer;
     margin-bottom: 5px;
+    font-weight: 600;
 }
 
 .font-item {
     &:hover {
         font-weight: 800;
+    }
+    &.opan-sans {
+        font-family: $open-sans-font;
+    }
+    &.roboto {
+        font-family: $roboto-font;
+    }
+    &.lato {
+        font-family: $lato-font;
+    }
+    &.dosis {
+        font-family: $dosis-font;
+    }
+    &.fuggles {
+        font-family: $fuggles-font;
     }
 }
 
