--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -524,7 +524,7 @@ img.question_mark {
 
         .item_two {
             position: relative;
-            padding: 44px 22px 0;
+            padding: 44px 0px 0 22px;
             background: #f7f7f7;
             flex: 1 1 auto;
             padding-top: 15px;
