--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -846,12 +846,20 @@ img.question_mark {
             margin-bottom: 22px;
             margin-right: 0px;
             text-decoration: none;
+            -webkit-border-radius: 6px;
+            -moz-border-radius: 6px;
+            -ms-border-radius: 6px;
+            -o-border-radius: 6px;
+            border-radius: 6px;
             &.thumbnail-view {
-
                 display: flex;
             }
             .thumbnail-img {
                 width: 32%;
+                img {
+                    border-top-left-radius: 6px;
+                    border-bottom-left-radius: 6px;
+                }
             }
 
             .details {
@@ -859,6 +867,8 @@ img.question_mark {
                 background: rgb(241, 223, 213);
                 padding: 16.5px 13.75px;
                 width: 68%;
+                border-top-right-radius: 6px;
+                border-bottom-right-radius: 6px;
                 .title {
                     font-weight: 700;
                     font-size: 0.98em;
@@ -904,6 +914,7 @@ img.question_mark {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+                border-radius: 6px;
                 .title {
                     font-weight: 700;
                     font-size: 0.98em;
@@ -939,16 +950,22 @@ img.question_mark {
             &.thumbnail-highlight-view {
                 display: block;
             }
-            // .thumbnail-highlight-img {
-            //     padding-bottom: 66.6667%;
-            //     background-size: cover;
-            //     background-position: 50%;
-            // }
+            .thumbnail-highlight-img {
+                // padding-bottom: 66.6667%;
+                // background-size: cover;
+                // background-position: 50%;
+                img {
+                    border-top-left-radius: 6px;
+                    border-top-right-radius: 6px;
+                }
+            }
 
             .details {
                 color: rgb(51, 51, 51);
                 background: rgb(241, 223, 213);
                 padding: 16.5px 13.75px;
+                border-bottom-left-radius: 6px;
+                border-bottom-right-radius: 6px;
                 .title {
                     font-weight: 700;
                     font-size: 0.98em;
@@ -974,7 +991,7 @@ img.question_mark {
 
     &.thumbnail-grid {
         .live-preview {
-            // flex-wrap: wrap;
+            flex-wrap: wrap;
              &.grid-2 {
                  a {
                      width: calc(50% - 20px);
@@ -1007,8 +1024,12 @@ img.question_mark {
                 // background-position: 50%;
                 // border-radius: 15px;
                 img {
-                    border-radius: 15px;
-                }
+                    border-radius: 6px;
+                    -webkit-border-radius: 6px;
+                    -moz-border-radius: 6px;
+                    -ms-border-radius: 6px;
+                    -o-border-radius: 6px;
+}
             }
         }
 
@@ -1040,12 +1061,18 @@ img.question_mark {
                     // padding-bottom: 66.6667%;
                     // background-size: cover;
                     // background-position: 50%;
+                    img {
+                        border-top-left-radius: 6px;
+                        border-top-right-radius: 6px;
+                    }
                 }
 
                 .details {
                     color: rgb(51, 51, 51);
                     background: rgb(241, 223, 213);
                     padding: 16.5px 13.75px;
+                    border-bottom-left-radius: 6px;
+                    border-bottom-right-radius: 6px;
 
                     .title {
                         font-weight: 700;
