--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1048,14 +1048,14 @@ img.question_mark {
                 a {
                     border-color: rgb(51, 51, 51);
                     border-width: 0px;
-                    border-radius: 5.6px;
+                    border-radius: 6px;
                     box-shadow: #0000004d 0px 10px 30px 0px;
+                    margin: 10px;
                     margin-bottom: 22px;
-                    margin-right: 22px;
                     text-decoration: none;
                     display: block;
                     width: 272px;
-                }
+}
 
                 .thumbnail-carousel-img {
                     // padding-bottom: 66.6667%;
