--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -921,6 +921,34 @@ img.question_mark {
                     -webkit-line-clamp: 3;
                     overflow: hidden;
                 }
+
+                &.tactile_one {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #aaeaac, #aeeeb0);
+                }
+
+                &.tactile_two {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #9dd79e, #bbffbe);
+                }
+
+                &.tactile_three {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #bbffbe, #a0dba2);
+                }
+
+                &.tactile_four {
+                    border-color: #b1f3b3;
+                    box-shadow: #0000000a -6px -6px 13px inset,
+                        #00000026 6px 6px 13px inset;
+                    background: linear-gradient(145deg, #aaeaac00, #aeeeb000);
+                }
             }
         }
 
@@ -981,6 +1009,34 @@ img.question_mark {
                     -webkit-line-clamp: 3;
                     overflow: hidden;
                 }
+
+                &.tactile_one {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #aaeaac, #aeeeb0);
+                }
+
+                &.tactile_two {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #9dd79e, #bbffbe);
+                }
+
+                &.tactile_three {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #bbffbe, #a0dba2);
+                }
+
+                &.tactile_four {
+                    border-color: #b1f3b3;
+                    box-shadow: #0000000a -6px -6px 13px inset,
+                        #00000026 6px 6px 13px inset;
+                    background: linear-gradient(145deg, #aaeaac00, #aeeeb000);
+                }
             }
         }
 
@@ -1029,6 +1085,34 @@ img.question_mark {
                     -webkit-line-clamp: 3;
                     overflow: hidden;
                 }
+
+                // &.tactile_one {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #baffbc -6px -6px 13px,
+                //         #94cb96 6px 6px 13px;
+                //     background: linear-gradient(145deg, #aaeaac, #aeeeb0);
+                // }
+
+                // &.tactile_two {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #baffbc -6px -6px 13px,
+                //         #94cb96 6px 6px 13px;
+                //     background: linear-gradient(145deg, #9dd79e, #bbffbe);
+                // }
+
+                // &.tactile_three {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #baffbc -6px -6px 13px,
+                //         #94cb96 6px 6px 13px;
+                //     background: linear-gradient(145deg, #bbffbe, #a0dba2);
+                // }
+
+                // &.tactile_four {
+                //     border-color: #b1f3b3;
+                //     box-shadow: #0000000a -6px -6px 13px inset,
+                //         #00000026 6px 6px 13px inset;
+                //     background: linear-gradient(145deg, #aaeaac00, #aeeeb000);
+                // }
             }
         }
 
@@ -1083,6 +1167,34 @@ img.question_mark {
                     -webkit-box-orient: vertical;
                     -webkit-line-clamp: 3;
                     overflow: hidden;
+                }
+
+                &.tactile_one {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #aaeaac, #aeeeb0);
+                }
+
+                &.tactile_two {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #9dd79e, #bbffbe);
+                }
+
+                &.tactile_three {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #bbffbe, #a0dba2);
+                }
+
+                &.tactile_four {
+                    border-color: #b1f3b3;
+                    box-shadow: #0000000a -6px -6px 13px inset,
+                        #00000026 6px 6px 13px inset;
+                    background: linear-gradient(145deg, #aaeaac00, #aeeeb000);
                 }
             }
         }
@@ -1198,6 +1310,34 @@ img.question_mark {
                     -webkit-box-orient: vertical;
                     -webkit-line-clamp: 3;
                     overflow: hidden;
+                }
+
+                &.tactile_one {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #aaeaac, #aeeeb0);
+                }
+
+                &.tactile_two {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #9dd79e, #bbffbe);
+                }
+
+                &.tactile_three {
+                    border-color: #b1f3b3;
+                    box-shadow: #baffbc -6px -6px 13px,
+                        #94cb96 6px 6px 13px;
+                    background: linear-gradient(145deg, #bbffbe, #a0dba2);
+                }
+
+                &.tactile_four {
+                    border-color: #b1f3b3;
+                    box-shadow: #0000000a -6px -6px 13px inset,
+                        #00000026 6px 6px 13px inset;
+                    background: linear-gradient(145deg, #aaeaac00, #aeeeb000);
                 }
             }
         }
