--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -633,6 +633,9 @@ img.question_mark {
                                         stroke: #000;
                                     }
                                 }
+                                .preview_vcard {
+                                    cursor: pointer;
+                                }
                             }
 
                             .preview-img {
